[package]
name = "simple-stopwatch"
version = "0.1.3"
authors = ["Huw Bowles <huw.bowles@gmail.com>"]
description = """
Minimal stopwatch for rust, returns float values
"""
keywords = ["stopwatch", "timekeeper", "timer"]
repository = "https://github.com/huwb/rust-simple-stopwatch"
documentation = "https://docs.rs/simple-stopwatch/"
homepage = "https://github.com/huwb/rust-simple-stopwatch"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "huwb/rust-simple-stopwatch" }

[dependencies]
time = "0.1.39"
